--- a/src/main/resources/static/css/main/program-list.css
+++ b/src/main/resources/static/css/main/program-list.css
@@ -444,7 +444,10 @@ main{
 }
 
 .scrapButton > svg > path{
-    fill: rgb(255, 255, 255);
+    fill: #222222;
+}
+.scrapButton[aria-pressed="true"] > svg > path {
+    fill : #00DD6D;
 }
 
 .companyName{
