--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -226,9 +226,11 @@
                                 />
                             </li>
                             <li class="loginButtonWrap">
-                                <button class="loginButton">
-                                    회원가입 / 로그인
-                                </button>
+                                <a href="/member/login">
+                                    <button class="loginButton">
+                                        회원가입 / 로그인
+                                    </button>
+                                </a>
                             </li>
                         </ul>
                     </div>
