--- a/src/main/resources/templates/member/account-scraplist.html
+++ b/src/main/resources/templates/member/account-scraplist.html
@@ -32,7 +32,7 @@
                         <div class="mypagemenu-wrapper">
                             <ul class="mypagemenu1">
                                 <li class="mypagemenu2">
-                                    <a target="_self">입사지원
+                                    <a target="/mypage/account-applied">입사지원
                                         현황</a>
                                 </li>
                                 <li class="mypagemenu2">
