2025 03 18 member almost done

--- a/src/main/resources/templates/member/account-main.html
+++ b/src/main/resources/templates/member/account-main.html
@@ -41,7 +41,8 @@
                                         현황</a>
                                 </li>
                                 <li class="mypagemenu2">
-                                    <a target="_self" href="/mypage/account-scraplist">스크랩
+                                         <!--임시 태그-->
+                                    <a target="_self" href="/resume/main">스크랩
                                         리스트</a>
                                 </li>
                                 <li class="mypagemenu2">
