--- a/src/main/resources/templates/resume/resume-main.html
+++ b/src/main/resources/templates/resume/resume-main.html
@@ -168,7 +168,7 @@
                     <div>
                         <h1>이력서 관리</h1>
                     </div>
-                    <ul class="resume-content-list2">
+                    <ul class="resume-content-list2" id="resumeList">
                         <li class="resume-content3">
                             <div class="resume-content-inner4">
                                 <div class="resume-content-top">
@@ -302,5 +302,6 @@
     <div id="criteo-tags-div" style="display: none"></div>
 </body>
 <script src="/static/js/resume/resume-main.js"></script>
+
 
 </html>
