--- a/src/main/resources/static/css/enterprise/member-manage.css
+++ b/src/main/resources/static/css/enterprise/member-manage.css
@@ -455,3 +455,26 @@ input[type="radio"]:checked+.label {
     font-size: 18px;
     cursor: pointer;
 }
+
+/* 로딩 GIF 스타일 */
+#loading {
+    display: none; /* 처음엔 숨김 */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    scale: 0.8;
+    z-index: 1000;
+}
+
+/* 배경 어둡게 */
+#overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
