--- a/src/main/resources/templates/enterprise/master-invite.html
+++ b/src/main/resources/templates/enterprise/master-invite.html
@@ -4,45 +4,53 @@
     <meta charset="utf-8">
     <meta name="description" content="개발자 채용이 필요한 순간, 점핏으로 충분합니다">
     <meta name="naver-site-verification"
-        content="1d04e6a7cdb21de79c6f6d0bff593aeb5fdefd70">
-    <title>기업 서비스 | 마스터 계정 초대</title>
+          content="1d04e6a7cdb21de79c6f6d0bff593aeb5fdefd70">
+    <title>기업 서비스 | 계정 초대</title>
     <link rel="icon"
-        href="https://cdn.jumpit.co.kr/jumpit/favicon.png">
+          href="https://cdn.jumpit.co.kr/jumpit/favicon.png">
     <link rel="stylesheet"
-        href="/css/enterprise/mypage-headerfooter.css">
+          href="/css/enterprise/mypage-headerfooter.css">
     <link rel="stylesheet"
-        href="/css/enterprise/member-invite.css">
+          href="/css/enterprise/member-invite.css">
 </head>
 
 <body>
-    <div id="root">
-        <div id="skipnavigation"><a href="/#content">본문 바로가기</a></div>
+<div id="root">
+    <div id="skipnavigation"><a href="/#content">본문 바로가기</a></div>
 
-        <div class="container-wrapper">
-            <div class="container">
-                <img src="/images/member/temp-logo.png" alt="로고가 들어갈 자리" class="invite-logo">
-                <!-- 로고 이미지 -->
-                <h1>김템프님, 반갑습니다!</h1>
-                <p class="description">
-                    템프의 김템프님이<br>
-                    이템프님을 관리자 권한으로 초대하였습니다.
-                </p>
-                <p class="question">템프에 초대된 것에 동의하십니까?</p>
-                <button class="accept-btn">동의하고 템프 시작하기</button>
-                <p class="help-text">
-                    템프에 가입된 회원이 아닐 경우 <a
-                        href="mailto:help@temp.co.kr">help@temp.co.kr</a>으로
-                    문의 또는 고객센터로 연락바랍니다.<br>
-                    고객센터: 02-2025-2733 (운영시간: 09:00~18:00, 주말 및 공휴일
-                    휴무)
-                </p>
-            </div>
+    <div class="container-wrapper">
+        <div class="container">
+            <img src="/images/member/temp-logo.png" alt="로고가 들어갈 자리" class="invite-logo">
+            <!-- 로고 이미지 -->
+            <h1><span th:text="${memberName}"></span>님, 반갑습니다!</h1>
+            <p class="description">
+                <span th:text="${companyName}"></span>의 <span th:text="${inviterName}"></span>님이<br>
+                <span th:text="${memberName}"></span>님을 <span th:text="${role}"></span> 권한으로 초대하였습니다.
+            </p>
+            <p class="question">템프에 초대된 것에 동의하십니까?</p>
+            <button class="accept-btn" onclick="redirectToConfirmPage()">동의하고 템프 시작하기</button>
+            <p class="help-text">
+                템프에 가입된 회원이 아닐 경우 <a
+                    href="mailto:help@temp.co.kr">help@temp.co.kr</a>으로
+                문의 또는 고객센터로 연락바랍니다.<br>
+                고객센터: 02-2025-2733 (운영시간: 09:00~18:00, 주말 및 공휴일
+                휴무)
+            </p>
         </div>
-
-
     </div>
-    <div id="modal"></div>
+
+
+</div>
+<div id="modal"></div>
 
 </body>
+<script th:inline="javascript">
+    const code = [[${code}]]; // 서버에서 전달한 code 값
+    console.log("Received code from server: " + code);
 
+    function redirectToConfirmPage() {
+        const confirmUrl = '/auth/confirm?code=' + code; // code를 URL에 추가
+        window.location.href = confirmUrl; // confirm 페이지로 리디렉션
+    }
+</script>
 </html>
